java/java-tests/testData/codeInsight/daemonCodeAnalyzer/advHighlighting9/HighlightApiUsages.java
@Deprecated(<error descr="Usage of API documented as @since 9+">forRemoval</error> = true)
class MyTest {}